feat(tools): Add gecho

--- a/tool/tools.yaml
+++ b/tool/tools.yaml
@@ -584,3 +584,7 @@ tools:
     identifier: "telepresenceio/telepresence"
     description: "Local development against a remote Kubernetes or OpenShift cluster."
     categories: ["Network"]
+  gecho:
+    identifier: "allaman/gecho"
+    description: "A simple HTTP/TCP server."
+    categories: ["Network"]
