--- a/tool/tools.yaml
+++ b/tool/tools.yaml
@@ -615,3 +615,33 @@ tools:
     identifier: "control-theory/gonzo"
     description: "Gonzo! The Go based TUI log analysis tool"
     categories: ["System"]
+  wrkflw:
+    identifier: "bahdotsh/wrkflw"
+    description: "Validate and Run GitHub Actions locally."
+    categories: ["Development"]
+  kat:
+    identifier: "MacroPower/kat"
+    description: "TUI and rule-based rendering engine for Kubernetes manifests"
+    categories: ["Kubernetes", "GitOps"]
+    asset_filters: ["tar.gz", "^sig", "^json"]
+  onedump:
+    identifier: "liweiyi88/onedump"
+    description: "Effortless database administration tool"
+    categories: ["Database"]
+  jj:
+    identifier: "jj-vcs/jj"
+    description: "A Git-compatible VCS that is both simple and powerful"
+    categories: ["Development", "Git"]
+  jjui:
+    identifier: "idursun/jjui"
+    description: "Jujutsu UI (jjui) is a Text User Interface (TUI) designed for interacting with the Jujutsu version control system."
+    categories: ["Development", "Git"]
+  yozefu:
+    identifier: "MAIF/yozefu"
+    description: "An interactive terminal user interface (TUI) application for exploring data of a kafka cluster."
+    categories: ["Development"]
+    asset_filters: ["^json"]
+  oha:
+    identifier: "hatoo/oha"
+    description: "Ohayou(おはよう), HTTP load generator, inspired by rakyll/hey with tui animation."
+    categories: ["Development", "Testing"]
